Added Javadoc-style docstrings.